Finalmente ya recibe las charlas, solo falta poder actualizar el chat cuando envia datos o los recibe. Manda ubicacion correctamente y tambien puede rechazar cotizaciones

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ProyectoMoviles</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_seleccionar_ubicacion2">SeleccionarUbicacion2</string>
 </resources>
